--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,3 +15,9 @@ steps:
   inputs:
     mavenPomFile: 'pom.xml'
     goals: 'clean package'
+    publishJUnitResults: false
+    javaHomeOption: 'JDKVersion'
+    mavenVersionOption: 'Default'
+    mavenAuthenticateFeed: false
+    effectivePomSkip: false
+    sonarQubeRunAnalysis: false
