Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,3 +26,14 @@ stages:
           inputs:
             mavenPomFile: 'pom.xml'
             goals: 'package'
+  - stage: 'Deploy'
+    jobs:
+      - job: 'DeployDev'
+        steps:
+          - task: Bash@3
+            inputs:
+              targetType: 'inline'
+              script: |
+                # Write your commands here
+                
+                echo 'Hello world'
