Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,10 +14,4 @@ stages:
     jobs:
       - job: 'Clean'
         steps:
-        - task: Bash@3
-          inputs:
-            targetType: 'inline'
-            script: |
-              # Write your commands here
-              
-              echo 'Hello world $NAME'
+        - bash: echo $name
