--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,5 +14,5 @@ stages:
     jobs:
       - job: 'Clean'
         steps:
-        - bash: echo $NAME
+        - bash: echo Hello, $NAME
         - bash: echo Hari Kammana
